# stark-anatomy

./: .gitignore
code/: README.md  pyproject.toml
code/stark/: algebra.py  fast_rpsss.py  fast_stark.py  fri.py  ip.py  merkle.py  multivariate.py  ntt.py  rescue_prime.py  rpsss.py  stark.py  test_fast_stark.py  test_fri.py  test_ip.py  test_merkle.py  test_multivariate.py  test_ntt.py  test_rescue_prime.py  test_rpsss.py  test_stark.py  test_univariate.py  univariate.py
code/tests/: test_stark.py
