[tool.poetry]
name = "stark"
version = "0.1.0"
description = ""
authors = ["Wei-N-Ning <macgnw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pylint = "^2.14.3"
mypy = "^0.961"
yapf = "^0.32.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
